Make sure the focus styles work in WHCM
Co-authored-by: Darek Kay <hello@darekkay.com>

--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -251,7 +251,7 @@
 
 .sample-button {
   &:focus {
-    outline: 0;
+    outline: transparent solid 2px;
   }
 
   &:focus-visible .demo-icon-container {
