Prevent minification of `nextDefineUri`

--- a/lib/omt.ejs
+++ b/lib/omt.ejs
@@ -11,8 +11,6 @@
  * limitations under the License.
  */
 
-var nextDefineUri;
-
 // If the loader is already loaded, just stop.
 if (!self.<%- amdFunctionName %>) {
   let registry = {};
@@ -25,7 +23,7 @@ if (!self.<%- amdFunctionName %>) {
         fetch(uri)
           .then(resp => resp.text())
           .then(code => {
-            nextDefineUri = uri;
+            self.nextDefineUri = uri;
             eval(code);
           })
       <% } else { %>
@@ -36,7 +34,7 @@ if (!self.<%- amdFunctionName %>) {
             script.onload = resolve;
             document.head.appendChild(script);
           } else {
-            nextDefineUri = uri;
+            self.nextDefineUri = uri;
             importScripts(uri);
             resolve();
           }
@@ -53,7 +51,7 @@ if (!self.<%- amdFunctionName %>) {
   };
 
   self.<%- amdFunctionName %> = (depsNames, factory) => {
-    const uri = nextDefineUri || ("document" in self ? document.currentScript.src : "") || location.href;
+    const uri = self.nextDefineUri || ("document" in self ? document.currentScript.src : "") || location.href;
     if (registry[uri]) {
       // Module is already loading or loaded.
       return;
