--- a/lib/omt.ejs
+++ b/lib/omt.ejs
@@ -63,9 +63,9 @@ if (!self.<%- amdFunctionName %>) {
       exports,
       require
     };
-    registry[uri] = Promise.all(depsNames.map(
+    registry[uri] = Promise.resolve().then(() => Promise.all(depsNames.map(
       depName => specialDeps[depName] || require(depName)
-    )).then(deps => {
+    ))).then(deps => {
       factory(...deps);
       return exports;
     });
