--- a/lib/omt.ejs
+++ b/lib/omt.ejs
@@ -63,6 +63,9 @@ if (!self.<%- amdFunctionName %>) {
       exports,
       require
     };
+    // Note: Promise.resolve() is necessary to delay loading until all the
+    // `define`s on the current page had a chance to execute first.
+    // This allows to inline some deps on the main page.
     registry[uri] = Promise.resolve().then(() => Promise.all(depsNames.map(
       depName => specialDeps[depName] || require(depName)
     ))).then(deps => {
