uses gap instead of margins

--- a/src/client/lazy-app/Compress/Results/style.css
+++ b/src/client/lazy-app/Compress/Results/style.css
@@ -173,6 +173,7 @@
   grid-template-columns: auto auto auto;
   line-height: 1;
   font-size: 2.6rem;
+  gap: 0.2rem;
 
   @media (min-width: 600px) {
     background: var(--main-theme-color);
@@ -205,7 +206,6 @@
   position: relative;
   top: 4px;
   opacity: 0.76;
-  margin-left: 0.2rem;
   font-size: 0.5em;
 }
 
