--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -126,23 +126,6 @@
   background: var(--white);
   position: relative;
   padding: 5em 2em;
-  &:nth-of-type(even) {
-    & .info-img-wrapper {
-      order: 1;
-      @media (min-width: 768px) {
-        justify-self: start;
-      }
-    }
-
-    & .info-text-wrapper {
-      order: 2;
-      text-align: right;
-      align-items: flex-end;
-      @media (min-width: 768px) {
-        justify-self: end;
-      }
-    }
-  }
 
   @media (min-width: 1200px) {
     padding: 5em 0;
@@ -152,25 +135,26 @@
 .info-container {
   max-width: 1000px;
   margin: 0 auto;
-  opacity: 0;
-  @media screen and (prefers-reduced-motion: no-preference) {
-    transform: translate(0px, 40px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-}
-
-.info-container.appear {
-  opacity: 1;
-  @media screen and (prefers-reduced-motion: no-preference) {
-    transform: translate(0px, 0px);
-  }
 }
 
 .info-content {
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 320px), 1fr));
+  grid-template-columns: 1fr;
   gap: 1em;
+
+  grid-template-areas:
+    'text'
+    'img';
+
+  @media (min-width: 712px) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'text img';
+
+    .info:nth-child(even) & {
+      grid-template-areas: 'img text';
+    }
+  }
 }
 
 .info-title {
@@ -201,22 +185,34 @@
   flex-flow: column wrap;
   max-width: 30em;
   justify-self: center;
-  @media (min-width: 768px) {
+  grid-area: text;
+
+  @media (min-width: 712px) {
     justify-self: start;
+    .info:nth-child(even) & {
+      text-align: right;
+      justify-self: end;
+    }
   }
+}
+
+.info-img-wrapper {
+  grid-area: img;
 }
 
 .info-img {
   display: block;
   width: 100%;
   height: auto;
-}
-
-.info-img-wrapper {
   max-width: 400px;
-  justify-self: center;
+  margin: 0 auto;
+
   @media (min-width: 768px) {
-    justify-self: end;
+    margin: 0 0 0 auto;
+
+    .info:nth-child(even) & {
+      margin: 0;
+    }
   }
 }
 
