--- a/src/client/lazy-app/Compress/Output/style.css
+++ b/src/client/lazy-app/Compress/Output/style.css
@@ -107,6 +107,11 @@
   }
 }
 
+.single-button {
+  composes: button;
+  border-radius: 6px;
+}
+
 .first-button {
   composes: button;
   border-radius: 6px 0 0 6px;
@@ -160,4 +165,9 @@ input.zoom {
   & > * {
     pointer-events: auto;
   }
+}
+
+.pixelated {
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
