Aliasing toggle button (#1132)

--- a/src/client/lazy-app/Compress/Output/style.css
+++ b/src/client/lazy-app/Compress/Output/style.css
@@ -86,8 +86,7 @@
   font-size: 1.2rem;
   cursor: pointer;
 
-  &:focus {
-    /* box-shadow: 0 0 0 2px var(--hot-pink); */
+  &:focus-visible {
     box-shadow: 0 0 0 2px #fff;
     outline: none;
     z-index: 1;
@@ -160,4 +159,9 @@ input.zoom {
   & > * {
     pointer-events: auto;
   }
+}
+
+.pixelated {
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
