Some additional fixes

--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -61,12 +61,12 @@
   }
 }
 
-.load-img-content, .javascript-disabled-notification {
+.load-img-content,
+.javascript-disabled-notification {
   position: relative;
   --size: 29rem;
   max-width: var(--size);
   width: 100vw;
-  height: var(--size);
   display: grid;
   grid-template-rows: max-content max-content;
   justify-items: center;
