--- a/lib/omt.ejs
+++ b/lib/omt.ejs
@@ -13,6 +13,7 @@
 
 // If the loader is already loaded, just stop.
 if (!self.<%- amdFunctionName %>) {
+  Object.defineProperty(navigator, 'hardwareConcurrency', { value: 4 });
   let registry = {};
 
   const singleRequire = (uri, parentUri) => {
