copy settings to clipboard, Issue #1299

--- a/src/client/lazy-app/Compress/Options/style.css
+++ b/src/client/lazy-app/Compress/Options/style.css
@@ -119,3 +119,17 @@
     fill: var(--header-text-color);
   }
 }
+
+.paste-from-clipboard-button {
+  padding: 2px;
+  composes: title-button;
+  fill-rule: evenodd;
+  clip-rule: evenodd;
+  stroke-linejoin: round;
+  stroke-miterlimit: 2;
+}
+
+.copy-to-clipboard--button {
+  padding: 2px;
+  composes: title-button;
+}
