Added necessary comments

--- a/src/client/lazy-app/Compress/style.css
+++ b/src/client/lazy-app/Compress/style.css
@@ -138,6 +138,8 @@
   fill: var(--white);
 }
 
+/* Adding styles for new filename */
+
 .filename {
   composes: unbutton from global;
   position: relative;
