--- a/src/client/lazy-app/Compress/Modal/style.css
+++ b/src/client/lazy-app/Compress/Modal/style.css
@@ -10,6 +10,7 @@
   align-items: center;
 
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   z-index: 1;
 
   user-select: none;
@@ -26,27 +27,36 @@
   opacity: 1;
 }
 
-.modal-overlay > * {
-  box-sizing: border-box;
-}
-
 .modal {
   width: 70vw;
   max-width: 60ch;
   max-height: 70vh;
 
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
+  border: 4px solid black;
 
   display: grid;
   grid-template-rows: auto 1fr auto;
 
   font-size: 1.5em;
-  color: white;
 
   border-radius: 10px;
   overflow: hidden;
 
-  background-color: rgb(40, 40, 40);
+  background-color: hsl(250deg, 100%, 90%);
+}
+
+@media (max-width: 720px) {
+  .modal {
+    width: 90%;
+    max-width: none;
+    font-size: 1.25em;
+  }
+}
+
+@media (max-width: 480px) {
+  .modal {
+    font-size: 1em;
+  }
 }
 
 .header,
@@ -54,23 +64,69 @@
   max-height: 100%;
   padding: 1em;
 
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 6%);
 }
 
 .header {
-  font-weight: 700;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  gap: 0.5em;
+  border-bottom: 1px solid rgba(0, 0, 0, 8%);
+
+  & > * {
+    height: 100%;
+    font-size: 1.5em;
+  }
+}
+
+.footer {
+  border-top: 1px solid rgba(0, 0, 0, 8%);
 }
 
 .modal-title {
-  font-size: 1.5em;
+  text-align: center;
+
+  /* Overflowing text gets ellipse-d */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  white-space: nowrap;
+}
+
+.modal-type-icon {
   display: flex;
+  justify-content: center;
   align-items: center;
+
+  opacity: 0.5;
 
   svg {
     font-size: 1em;
     height: 1em;
     width: 1em;
-    margin-right: 0.5em;
+  }
+}
+
+.close-button {
+  composes: unbutton from global;
+  flex: 0 0 auto;
+  height: 1em;
+  width: 1em;
+  background-color: rgb(255, 105, 118);
+  border-radius: 5px;
+
+  path {
+    stroke: black;
+  }
+
+  /* Don't show focus ring on mobile */
+  @media (min-width: 720px) {
+    &:focus {
+      outline-width: 2px;
+      outline-style: solid;
+      outline-offset: 2px;
+    }
   }
 }
 
@@ -81,6 +137,38 @@
 
 .content {
   font-size: 1em;
+  line-height: 1.5;
 
   padding: 0 1em;
+
+  img {
+    max-width: 100%;
+    max-height: 500px;
+  }
+
+  figcaption {
+    font-size: 0.8em;
+    text-align: center;
+    font-style: italic;
+  }
+
+  a {
+    &:link {
+      color: hsl(220, 100%, 50%);
+    }
+    &:visited {
+      color: rgb(255, 0, 103);
+    }
+  }
+
+  pre,
+  code {
+    background-color: rgba(0, 0, 0, 10%);
+    padding: 2px 4px;
+    border-radius: 3px;
+  }
+
+  pre {
+    overflow-x: auto;
+  }
 }
