--- a/src/client/lazy-app/Modal/style.css
+++ b/src/client/lazy-app/Modal/style.css
@@ -1,33 +1,5 @@
-.modal-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  z-index: 1;
-
-  user-select: none;
-  pointer-events: none;
-  opacity: 0;
-
-  transition: opacity 250ms ease;
-}
-
-.modal-shown {
-  user-select: auto;
-  pointer-events: auto;
-
-  opacity: 1;
-}
-
-.modal {
+dialog {
+  padding: 0;
   width: 70vw;
   max-width: 60ch;
   max-height: 70vh;
@@ -38,16 +10,55 @@
   grid-template-rows: auto 1fr auto;
 
   font-size: 1.5em;
+  color: var(--light-gray);
 
+  border: none;
   border-radius: 10px;
   overflow: hidden;
 
   background-color: var(--off-black);
-  color: var(--light-gray);
+
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 250ms ease;
+
+  /* backdrop can't be transitioned easily, so we must   */
+
+  &::backdrop {
+    background-color: rgba(0, 0, 0, 30%);
+  }
+
+  &[open]::backdrop {
+    animation: backdrop-fade-in 250ms linear;
+
+    @keyframes backdrop-fade-in {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
+  }
+
+  &.modal--closing::backdrop {
+    transition: opacity 250ms linear;
+    opacity: 0;
+  }
+}
+
+dialog[open] {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+dialog.modal--closing {
+  opacity: 0;
+  transform: translateY(50px);
 }
 
 @media (max-width: 720px) {
-  .modal {
+  dialog {
     width: 90%;
     max-width: none;
     font-size: 1.25em;
@@ -55,7 +66,7 @@
 }
 
 @media (max-width: 480px) {
-  .modal {
+  dialog {
     font-size: 1em;
   }
 }
@@ -74,9 +85,10 @@
   align-items: center;
   gap: 0.5em;
   border-bottom: 1px solid rgba(0, 0, 0, 8%);
+  align-content: stretch;
 
+  /* Apply font size only to children so that padding is unaffected */
   & > * {
-    height: 100%;
     font-size: 1.5em;
   }
 }
