--- a/src/shared/prerendered-app/Intro/style.css
+++ b/src/shared/prerendered-app/Intro/style.css
@@ -249,9 +249,9 @@
   justify-items: center;
   gap: 2rem;
 
-  @media (min-width: 480px) {
-    justify-content: end;
-    grid-auto-flow: column;
+  @media (min-width: 580px) {
+    width: 100%;
+    grid-template-columns: 1fr repeat(2, max-content);
     align-items: center;
     gap: 4rem;
   }
@@ -260,6 +260,13 @@
 .footer-link {
   text-decoration: none;
   color: inherit;
+}
+
+.footer-netlify-link {
+  composes: footer-link;
+  @media (min-width: 580px) {
+    justify-self: start;
+  }
 }
 
 .footer-link-with-logo {
